# quant-backtest-framework

./: .gitattributes  .gitignore  CLAUDE.md  DESIGN_DECISIONS.md  README.md  conftest.py  pyproject.toml  requirements.txt
configs/: data.yaml
docs/: DATA_QUALITY.md  DATA_QUALITY_EURUSD.md  DATA_QUALITY_GBPJPY.md  DATA_QUALITY_GBPUSD.md  DATA_QUALITY_WTIUSD.md  MERGE_PLAN.md  MERGE_REPORT.md  PROJECT_BRIEF.md  PROJECT_BRIEF_multi_instrument.md  REPLICATION.md  REPORT.md  REPORT_MULTI_ASSET.md  SPEC.md  SPEC_multi_instrument.md
mtf_smc/: __init__.py  config.py  grid.py  sessions.py  timeframes.py
scripts/: build_quality_report.py  compare_new_vs_old.py  compare_old_engine.py  explain_trades.py  ingest_instruments.py  ingest_oos_data.py  make_figures.py  make_replication_figure.py  run_grid.py  run_legacy_fidelity.py  run_legacy_walkforward.py  run_legacy_walkforward_report.py  run_momentum_control.py  run_oos.py  run_portfolio.py  run_replication.py  run_robustness.py  run_tp_sweep.py  sanity_backtest.py  smoke_primitives.py  verify_instruments.py  verify_xauusd_regression.py
tests/: conftest.py  test_alignment_no_lookahead.py  test_backtester.py  test_backtester_integration.py  test_cbdb.py  test_confluence_poi.py  test_context_asof.py  test_data_integrity.py  test_fills_costs.py  test_fvg.py  test_grid.py  test_indicators.py  test_instrument_generalization.py  test_instruments_multi.py  test_legacy_poi.py  test_legacy_session_filter.py  test_legacy_structure.py  test_legacy_trigger.py  test_loader_slice.py  test_lookahead_primitives.py  test_merge_config.py  (+15 more)
(+33 files in other folders)
