[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mtf-smc-xauusd"
version = "0.1.0"
description = "Falsification-oriented backtest of a multi-timeframe SMC price-action strategy on XAUUSD."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aaron" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.1",
    "scipy>=1.11",
    "matplotlib>=3.6",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["mtf_smc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
